<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="text_Yes">Yes</string>
    <string name="text_No">No</string>
    <string name="text_Next">Next</string>

    <string name="text_Spine_CervicalSpineProtected">Cervical Spine Protected</string>
    <string name="text_Spine_NoCervicalSpineProtected">If No - cleared by whom</string>
    <string name="text_Spine_ClearingCriteriaApplied">Clearing Criteria Applied</string>
    <string name="text_Spine_Canadian">Canadian C.Spine Rule</string>
    <string name="text_Spine_Nexus">Nexus</string>

    <string name="app_name">Asclepius</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_Start">Start</string>
    <string name="button_Next">Next</string>
    <string name="title_activity_critical_dates">Critical Dates</string>
    <string name="text_DateOfIncident">Date of Incident</string>
    <string name="text_ArrivedAtScene">Arrived at Scene</string>
    <string name="text_DepartedScene">Departed Scene</string>
    <string name="text_ArrivedAtMajorTraumaCentre">Arrived at Major Trauma Centre</string>
    <string name="text_LasCadNumber">LAS CAD Number</string>
    <string name="title_activity_airway">Airway</string>
    <string name="text_Airway">Airway</string>
    <string name="text_Airway_Clear">Clear</string>
    <string name="text_Airway_Obstructed">Obstructed</string>
    <string name="text_AirwayType">Airway Type</string>
    <string name="text_AirwayType_Oro">Oropharyngeal Airway</string>
    <string name="text_AirwayType_Nas">Nasopharyngeal Airway</string>
    <string name="text_RSI">RSI</string>
    <string name="text_RSI_Pre">Pre-hospital</string>
    <string name="text_Comments">Comments</string>
    <string name="title_activity_spine">Spine</string>

    <string name="title_activity_breathing">Breathing</string>

    <string-array name="disbility_eye">
        <item>Open Spontaneously</item>
        <item>Open to Speech</item>
        <item>Open to Pain</item>
        <item>Never Open</item>
    </string-array>
    <string-array name="disbility_verbal">
        <item>Orientated</item>
        <item>Confused</item>
        <item>Inappropriate Words</item>
        <item>Incomprehensible Sounds</item>
        <item>No Response</item>
    </string-array>
    <string-array name="disbility_motor">
        <item>Obeys Commands</item>
        <item>Localises to Pain</item>
        <item>Flexion Withdrawal</item>
        <item>Decorticate Flexion</item>
        <item>Decerebrate Extension</item>
        <item>No Response</item>
    </string-array>
    <string-array name="disability_leftpupilsize">
        <item>1 mm</item>
        <item>2 mm</item>
        <item>3 mm</item>
        <item>4 mm</item>
        <item>5 mm</item>
        <item>6 mm</item>
        <item>7 mm</item>
        <item>8 mm</item>
        <item>9 mm</item>
        <item>10 mm</item>
    </string-array>
    <string-array name="disability_rightpupilsize">
        <item>1 mm</item>
        <item>2 mm</item>
        <item>3 mm</item>
        <item>4 mm</item>
        <item>5 mm</item>
        <item>6 mm</item>
        <item>7 mm</item>
        <item>8 mm</item>
        <item>9 mm</item>
        <item>10 mm</item>
    </string-array>
    <string-array name="exposure_site">
        <item>Axilla</item>
        <item>Oral</item>
        <item>Rectal</item>
        <item>Tympanic</item>
    </string-array>
    <string-array name="exposure_upperlimbpulses">
        <item>Left</item>
        <item>Right</item>
        <item>Bilateral</item>
        <item>None</item>
    </string-array>
    <string-array name="exposure_lowerlimbpulses">
        <item>Left</item>
        <item>Right</item>
        <item>Bilateral</item>
        <item>None</item>
    </string-array>
    <string-array name="bloods_bloodgastype">
        <item>Arterial</item>
        <item>Venous</item>
    </string-array>

    <string name="title_activity_circulation">Circulation</string>
    <string name="title_activity_disability">Disability</string>
    <string name="title_activity_exposure">Exposure</string>
    <string name="title_activity_bloods">Bloods</string>
    <string name="title_activity_fast_scan">Fast Scan</string>
    <string name="title_activity_summary">Summary</string>

</resources>
