<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true"
    tools:context=".Spine">
    <ScrollView
        android:id="@+id/ScrlView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        <LinearLayout
            android:id="@+id/layoutForScroll"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:text="@string/text_Spine_CervicalSpineProtected"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
            <LinearLayout
                android:id="@+id/layoutForScroll"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                <RadioGroup
                    android:id="@+id/radioGroup_Cervical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radioButton_Cervical_Yes"
                        android:text="@string/text_Yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        />
                    <RadioButton
                        android:id="@+id/radioButton_Cervical_No"
                        android:text="@string/text_No"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutForScroll_Cervical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/text_Spine_NoCervicalSpineProtected"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    />
                <EditText
                    android:id="@+id/editText"
                    android:inputType="textMultiLine"
                    android:layout_gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <TextView
                android:text="@string/text_Spine_ClearingCriteriaApplied"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radioButton_Ctriteria_CanadianRule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_Spine_Canadian"
                    />
                <RadioButton
                    android:id="@+id/radioButton_Ctriteria_Nexus"
                    android:text="@string/text_Spine_Nexus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </RadioGroup>
                
            <Button
                android:id="@+id/button"
                android:text="@string/text_Next"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="#6582ff"
                android:textColor="#ffffff"
                android:textSize="26dp"
                android:onClick="onButtonClick_Next"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
