<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CriticalDates">
    <ScrollView
        android:id="@+id/ScrlView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView_DateOfIncident">
        <TextView
            android:id="@+id/textView_DateOfIncident"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_DateOfIncident" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/textView_DateOfIncident_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="120dp"
                android:height="40dp"
                android:textSize="22dp"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/textView_DateOfIncident_Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="60dp"
                android:height="40dp"
                android:textSize="22dp" />
            <ImageButton
                android:id="@+id/button_DateOfIncident_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar"/>
            <ImageButton
                android:id="@+id/button_DateOfIncident_Time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/clock"/>
        </LinearLayout>
        <TextView
            android:id="@+id/textView_ArrivedAtScene"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_ArrivedAtScene"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/textView_ArrivedAtScene_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="120dp"
                android:height="40dp"
                android:textSize="22dp" />
            <TextView
                android:id="@+id/textView_ArrivedAtScene_Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="60dp"
                android:height="40dp"
                android:textSize="22dp" />
            <ImageButton
                android:id="@+id/button_ArrivedAtScene_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar"/>
            <ImageButton
                android:id="@+id/button_ArrivedAtScene_Time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/clock"/>
        </LinearLayout>
        <TextView
            android:id="@+id/textView_DepartedScene"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_DepartedScene"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/textView_DepartedScene_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="120dp"
                android:height="40dp"
                android:textSize="22dp" />
            <TextView
                android:id="@+id/textView_DepartedScene_Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="60dp"
                android:height="40dp"
                android:textSize="22dp" />
            <ImageButton
                android:id="@+id/button_DepartedScene_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar"/>
            <ImageButton
                android:id="@+id/button_DepartedScene_Time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/clock"/>
        </LinearLayout>
        <TextView
            android:id="@+id/textView_ArrivedAtMajorTraumaCentre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_ArrivedAtMajorTraumaCentre"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/textView_ArrivedAtMajorTraumaCentre_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="120dp"
                android:height="40dp"
                android:textSize="22dp" />
            <TextView
                android:id="@+id/textView_ArrivedAtMajorTraumaCentre_Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="60dp"
                android:height="40dp"
                android:textSize="22dp" />
            <ImageButton
                android:id="@+id/button_ArrivedAtMajorTraumaCentre_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar"/>
            <ImageButton
                android:id="@+id/button_ArrivedAtMajorTraumaCentre_Time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/clock"/>
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_LasCadNumber"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/editText"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:height="40dp"
            android:layout_marginTop="10dp"/>
        <Button
            android:text="@string/button_Next"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="onButtonClick_Next"
            android:layout_marginTop="10dp"
            android:background="#6582ff"
            android:textColor="#ffffff"
            android:textSize="26dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>
